2025-12-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_title_parts): Throw deprecation
	warning in category "delim" if the delimiter is invalid and
	we're not in compatibility mode.  This is a training wheel to
	get people off of ambiguous delimiters.  See Savannah #66009.

2025-12-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/check-delimiter-validity.sh: Improve
	tests.  Clarify progress messages to distinguish escape
	sequence, title request, and output comparison contexts.  Test
	two characters ('@', '_') that weren't tested before because I
	ran out of steam.  Test delimiters used with title requests and
	output comparisons even when not in compatibility mode.  Also
	cosmetically sort big lists to vertically align punctuation
	characters that aren't significant in numeric expressions,
	pairing them up by low-order bits of their ISO 646 code points.

2025-12-07  Alejandro Colomar <alx@kernel.org>

	* src/libs/libgroff/uniglyph.cpp:
	* src/preproc/eqn/delim.cpp:
	* src/preproc/eqn/text.cpp:
	* src/preproc/pic/lex.cpp:
	* src/preproc/refer/command.cpp:
	* src/preproc/refer/ref.cpp:
	* src/utils/hpftodit/hpuni.cpp:
	* src/utils/tfmtodit/tfmtodit.cpp: Include "stdcountof.h" header
	file.

	* src/preproc/eqn/delim.cpp: Initialize global constant
	`DELIM_TABLE_SIZE` using `countof()` instead of `sizeof` and
	division.

	* src/libs/libgroff/uniglyph.cpp
	(unicode_to_glyph_init::unicode_decompose_init):
	* src/preproc/eqn/text.cpp (special_to_entity):
	* src/preproc/pic/lex.cpp (lookup_keyword):
	* src/preproc/refer/command.cpp (execute_command):
	* src/preproc/refer/ref.cpp (find_month):
	* src/utils/hpftodit/hpuni.cpp
	(hp_msl_to_unicode_init::hp_msl_to_unicode_init):
	* src/utils/tfmtodit/tfmtodit.cpp (main): Use `countof()`
	instead of `sizeof` and division.

	countof() is [expected to be --GBR] standard (ISO C2y).

	Continues the long process of fixing Savannah #66518.
